test/broken/T271-UnterminatedComment/Main.dct

-- This module contains an unterminated block comment,
-- which the offside rule code needs to give a sensible error for.

module Main 
export main    : [r : Region]. Nat# -> Ptr# r Word8# -> Int#
with letrec

main    [e: Effect] : Unit -> S e Unit
 = do   0i#


{-

